# SceneStreamer

./: .gitignore  LICENSE  README.md  app.py  example_scenestreamer_motion_and_densified_agents.py  example_scenestreamer_motion_only.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: main.yml
cfgs/: motion_default.yaml  scenestreamer-base-large.yaml  scenestreamer-base-small.yaml  scenestreamer-base-xl.yaml  scenestreamer-full-large-nors.yaml  scenestreamer-full-large.yaml  scenestreamer-full-small.yaml  scenestreamer-full-xl.yaml
data/20_cat_training/: sd_Adv_reconstructed_1_v0_23b843afb4888c0.pkl  sd_Adv_reconstructed_1_v0_5f9ca28bf05c5af7.pkl  sd_Adv_reconstructed_1_v0_9451e78e0420eb09.pkl  sd_Adv_reconstructed_v0_1a21ac19f7228e44.pkl  sd_Adv_reconstructed_v0_26bbacd69b0763d.pkl  sd_Adv_reconstructed_v0_36a470069675ad1.pkl  sd_Adv_reconstructed_v0_37ff94b7926eadbe.pkl  sd_Adv_reconstructed_v0_43d5daa141b9a81e.pkl  sd_Adv_reconstructed_v0_45c01c919f32ee8f.pkl  sd_Adv_reconstructed_v0_49682a174b6413e1.pkl  sd_Adv_reconstructed_v0_558296b7ff048629.pkl  sd_Adv_reconstructed_v0_57efab06c446ab6a.pkl  sd_Adv_reconstructed_v0_5b81fda93b3ae7eb.pkl  sd_Adv_reconstructed_v0_74522a8872dd28bd.pkl  sd_Adv_reconstructed_v0_79db8637113e29a3.pkl  sd_Adv_reconstructed_v0_9c8cf086bd1923a2.pkl  sd_Adv_reconstructed_v0_a58acb81564470aa.pkl  sd_Adv_reconstructed_v0_cffe3d94aa5b817d.pkl  sd_Adv_reconstructed_v0_d5ce323a5cdc1bb9.pkl  sd_Adv_reconstructed_v0_fbfe8f22e4a0a8b0.pkl
data/20scenarios/: process.ipynb  sd_training.tfrecord-00000-of-01000_101d4e5775093d0c.pkl  (+16 more)
data/cat_validation_interactive_0 /: save.pkl
scenestreamer/: _startup.py  cli.py  clustering.sh  mcts.py  model_hub.py  rl_finetuning.py  train_init.py  train_motion.py  train_reltok.py
scripts/: _common.py  demo_gradio.py  densify_demo.py  preprocess.py  table1_mmd.py  table2_motion.py  table3_eval.py  table3_train.py
tests/: test_cli.py
(+178 files in other folders)
